spacing fixes

--- a/src/components/slices/faculty-grid.module.scss
+++ b/src/components/slices/faculty-grid.module.scss
@@ -6,25 +6,33 @@
 
 .photoContainer {
   display: flex;
-  gap: 20px;
+  gap: 30px;
   flex-direction: column;
   position: relative;
-  top: -215px;
+  top: -165px;
+  @media (min-width: $tablet) {
+    top: -215px;
+  }
 }
 
 .headImage {
   width: 100%;
-  height: 500px;
+  height: auto;
   border: 5px solid white;
+
+  @media (min-width: $tablet) {
+    height: 500px;
+  }
 }
 .grid {
   display: grid;
   grid-template-columns: repeat(2, min(1fr));
   column-gap: 30px;
-  row-gap: 30px; // if gap between cards too big on mobile when styling mobile its this*****
+  row-gap: 5px;
 
   @media (min-width: $tablet) {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    row-gap: 30px;
   }
 }
 
@@ -32,7 +40,7 @@
   margin-bottom: 60px;
   text-align: center;
   background-color: $color-sage;
-  padding: 70px 60px 200px 60px;
+  padding: 40px 50px 130px 50px;
   p {
     display: block;
     margin: 0 auto;
@@ -41,6 +49,9 @@
     @media (min-width: $tablet) {
       width: 60%;
     }
+  }
+  @media (min-width: $tablet) {
+    padding: 70px 60px 200px 60px;
   }
 }
 
@@ -51,26 +62,26 @@
   display: block;
   margin-bottom: 16px;
   text-align: center;
+  @media (min-width: $tablet) {
+    margin-bottom: 0px;
+  }
 }
 .employeeCard {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 20px;
   .imageWrap {
     padding: 25px;
     background-color: $color-sage; // currently just sage so I can see it easier the other colors are similar
     margin-bottom: 20px;
   }
   .image {
-    width: 100%; // currently set to parent but might need to fix to image size (had it at 300px ***)
+    width: 100%;
     position: relative;
-    margin-bottom: 20px;
   }
 }
 
 .buttonArea {
-  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -81,7 +92,6 @@
 .viewWorkButton {
   min-width: 296px;
   height: 65px;
-  padding: 11px 15px;
   background: $color-orange;
   font-family: $font-secondary;
   font-weight: 600;
@@ -94,6 +104,11 @@
   // DONT FORGOT TO CHECK ABOUT ARROW ICON ******
 }
 
+button::after {
+  content: '\0279D';
+  margin-left: 10px;
+  font-size: 1.1em; // Adjust size as needed
+}
 .horizontalLine {
   width: 100%;
   height: 1px;
